sub projects OK

--- a/projectmanager/templates/projectmanager/includes/project-app/script.html
+++ b/projectmanager/templates/projectmanager/includes/project-app/script.html
@@ -10,3 +10,4 @@
 {% include "core/includes/page-app/script.html" %}
 
 {% include "projectmanager/includes/project-edit-app/script.html" %}
+{% include "projectmanager/includes/sub-projects-app/script.html" %}
