--- a/market/templates/market/product.html
+++ b/market/templates/market/product.html
@@ -28,6 +28,11 @@
 
 
     </div>
+    <div class="col-md-6">
+        {% include "core/includes/page-thumbnail-header-app/template.html" %}
+
+
+    </div>
 
     {% if shops %}
     <div class="col-md-6">
