--- a/core/templates/core/includes/page-thumbnail-header-app/template.html
+++ b/core/templates/core/includes/page-thumbnail-header-app/template.html
@@ -24,6 +24,27 @@
         <div id="set-page-thumbnail-header-app" v-cloak>
           <div class="row">
             <div class="col-md-12">
+              <div class="my-3">
+                <form
+                  action="https://www.google.com/search"
+                  method="get"
+                  target="_blank"
+                  id="search-form"
+                >
+                  <input name="q" type="hidden" value="{{page.title}}" />
+                  <button type="submit" class="btn btn-link p-0">
+                    <img
+                      src="{% static 'img/icons/google.png' %}"
+                      width="32"
+                      alt=""
+                    />
+
+                    جستجوی گوگل
+                  </button>
+                </form>
+              </div>
+            </div>
+            <div class="col-md-12">
               <form
                 id="set-page-thumbnail-header-form"
                 @submit.prevent="set_thumbnail_header()"
