--- a/accounting/templates/accounting/includes/add-brand-app/template.html
+++ b/accounting/templates/accounting/includes/add-brand-app/template.html
@@ -21,7 +21,7 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="">نام برند</label>
-                                    <input type="text" class="form-control" v-model="title">
+                                    <input type="text" class="form-control" v-model="name">
                                 </div>
                             </div>
 
