description app added for page

--- a/accounting/templates/accounting/invoice-print.html
+++ b/accounting/templates/accounting/invoice-print.html
@@ -100,7 +100,11 @@
         <br>
         کلیه اقلام فاکتور سالم بوده ، تست شده و تحویل خریدار گردید.
         <br>
-        تا تسویه کامل مبلغ فاکتور اجناس متعلق به فروشنده می باشد.
+        تا تسویه کامل مبلغ فاکتور اجناس متعلق به فروشنده و به صورت امانت نزد خریدار می باشد.
+        <br>
+        به علت نوسانات قیمت ، فاکتور فوق از لحاظ استعلام قیمت تا بیست و چهار ساعت معتبر می باشد.
+
+
         {% if invoice.description %}
         {{invoice.description|safe}}
         {% endif %}
