--- a/core/templates/core/page.html
+++ b/core/templates/core/page.html
@@ -20,6 +20,7 @@
                 {% include "attachments/includes/links-app/template.html" %}
 
             </div>
+ 
             <div class="col-md-4">
                 {% include "attachments/includes/downloads-app/template.html" %}
 
@@ -30,6 +31,16 @@
 
             </div>
 
+            <div class="col-md-12">
+                {% include "core/includes/page-description-app/short-description.html" %}
+            </div>
+
+            
+            <div class="col-md-12">
+                {% include "core/includes/page-description-app/description.html" %}
+
+            </div>
+      
             
             <div class="col-md-12">
                 {% include "attachments/includes/comments-app/template.html" %}
