--- a/accounting/templates/accounting/invoice.html
+++ b/accounting/templates/accounting/invoice.html
@@ -3,7 +3,6 @@
 <div class="row rtl farsi">
   <div class="col-md-3">
     {% include "accounting/includes/invoice-app/card.html" %}
-    {% include "core/includes/page-thumbnail-header-app/template.html" %}
 
   </div>
 
@@ -45,8 +44,10 @@
   <div class="col-md-4">
     {% include "attachments/includes/tags-app/template.html" %}
   </div>
-
-  <div class="col-md-12">
+  <div class="col-md-6">
+      {% include "core/includes/page-thumbnail-header-app/template.html" %}
+  </div>
+  <div class="col-md-6">
     {% include "attachments/includes/comments-app/template.html" %}
   </div>
   <div class="col-md-12">
