--- a/accounting/templates/accounting/service.html
+++ b/accounting/templates/accounting/service.html
@@ -7,6 +7,14 @@
   <div class="col-md-12">
     {% include "accounting/includes/invoice-line-item-units-app/template.html" %}
   </div>
+    <div class="col-md-12">
+    {% include "core/includes/page-description-app/short-description.html" %}
+  </div>
+
+  <div class="col-md-12">
+    {% include "core/includes/page-description-app/description.html" %}
+  </div>
+
 
   <div class="col-md-12"></div>
 </div>
