--- a/accounting/templates/accounting/financial-document.html
+++ b/accounting/templates/accounting/financial-document.html
@@ -3,9 +3,21 @@
   <div class="col-md-12">
     <div class="card">
       <div class="card-header">
-        <h5>{{financial_document.title}}</h5>
+        <h5>سند مالی</h5>
       </div>
-
+      <div class="card-body">
+        <h5>{{financial_document.title}}</h5>
+         {% if perms.accounting.change_financialdocument %}
+            <a href="{{financial_document.get_edit_url}}" class="my-2 text-warning mx-2" title="ویرایش" target="_blank">
+                <i class="fa fa-edit text-warning"></i>  
+            </a>
+            {% endif %}
+            {% if perms.accounting.delete_financialdocument %}
+            <a href="{{financial_document.get_delete_url}}" class="my-2 text-danger mx-2" title="حذف" target="_blank">
+                <i class="fa fa-trash text-danger"></i>  
+            </a>
+            {% endif %}
+      </div>
       
     </div>
   </div>
