edit financial event OK

--- a/accounting/templates/accounting/includes/financial-document-lines-app/script.html
+++ b/accounting/templates/accounting/includes/financial-document-lines-app/script.html
@@ -1,3 +1,8 @@
+
+
+{% if add_financial_document_line_form %}
+{% include "accounting/includes/add-financial-document-line-app/script.html" %}
+{% endif %}
 <script>
     let financial_document_lines = []
 
