--- a/accounting/templates/accounting/includes/financial-event-app/card-contents.html
+++ b/accounting/templates/accounting/includes/financial-event-app/card-contents.html
@@ -1,7 +1,7 @@
 {% include 'core/includes/page-app/card-contents.html' %}
 {% load to_price %}
 <h5>
-    <small class="text-muted"> مانده :</small>
+    <small class="text-muted"> مبلغ :</small>
     {{financial_event.amount|to_price}} {{CURRENCY}}
 </h5>
 
