--- a/core/templates/core/includes/page-description-app/description.html
+++ b/core/templates/core/includes/page-description-app/description.html
@@ -8,8 +8,9 @@
                     <button class="btn btn-link collapsed" data-toggle="collapse"
                         data-target="#collapse-page-description" aria-expanded="false"
                         aria-controls="collapse-page-description">
-                        توضیحات کامل درباره
-                        {{page.title}}
+                        توضیحات کامل 
+                        <!-- درباره
+                        {{page.title}} -->
                     </button>
                 </h5>
             </div>
