--- a/core/templates/core/includes/page-description-app/short-description.html
+++ b/core/templates/core/includes/page-description-app/short-description.html
@@ -12,7 +12,9 @@
             aria-expanded="false"
             aria-controls="collapse-page-short-description"
           >
-            توضیحات کوتاه درباره {{page.title}}
+            توضیحات کوتاه
+             <!-- درباره 
+             {{page.title}} -->
           </button>
         </h5>
       </div>
