--- a/accounting/templates/accounting/financial-document-line.html
+++ b/accounting/templates/accounting/financial-document-line.html
@@ -5,6 +5,7 @@
       <div class="card-body">
         <div>{{financial_document_line.title}}</div>
         <div>
+          سند مالی :
           <a
             href="{{financial_document_line.financial_document.get_absolute_url}}"
             >{{financial_document_line.financial_document.title}}</a
@@ -12,25 +13,26 @@
         </div>
 
         <div>
+          رویداد مالی :
           <a href="{{financial_document_line.financial_event.get_absolute_url}}"
             >{{financial_document_line.financial_event.title}}</a
           >
         </div>
+
+          <div>
+            حساب :
+          <a href="{{financial_document_line.accout.get_absolute_url}}"
+            >{{financial_document_line.accout.title}}</a
+          >
+        </div>
+
       </div>
     </div>
   </div>
 
-  <div class="col-md-4">
-    {% include "attachments/includes/downloads-app/template.html" %}
-  </div>
-  <div class="col-md-4">
-    {% include "attachments/includes/links-app/template.html" %}
-  </div>
-  <div class="col-md-4">
-    {% include "attachments/includes/comments-app/template.html" %}
-  </div>
+  
 </div>
 {% endblock content %}
 {% block script %} 
-{% include "core/includes/page-app/script.html" %} 
+{% include "accounting/includes/financial-document-line-app/script.html" %} 
 {% endblock script %}
