--- a/accounting/templates/accounting/financial-document.html
+++ b/accounting/templates/accounting/financial-document.html
@@ -6,7 +6,10 @@
         <h5>سند مالی</h5>
       </div>
       <div class="card-body">
-        <h5>{{financial_document.title}}</h5>
+        <h5>{{financial_document.title}} 
+          <span class="badge badge-{{financial_document.status_color}}">{{financial_document.status}}</span>
+
+        </h5>
          {% if perms.accounting.change_financialdocument %}
             <a href="{{financial_document.get_edit_url}}" class="my-2 text-warning mx-2" title="ویرایش" target="_blank">
                 <i class="fa fa-edit text-warning"></i>  
@@ -26,6 +29,13 @@
     {% include "accounting/includes/add-financial-document-line-app/template.html" %}
   </div>
   {% endif %}
+  
+  {% if edit_financial_document_form %}
+  <div class="col-md-12">
+    {% include "accounting/includes/edit-financial-document-app/template.html" %}
+  </div>
+  {% endif %}
+
   <div class="col-md-12">
     {% include "accounting/includes/financial-document-lines-app/template.html" %}
   </div>
