--- a/accounting/templates/accounting/includes/financial-event-app/script.html
+++ b/accounting/templates/accounting/includes/financial-event-app/script.html
@@ -1,6 +1,15 @@
  
 <script>
-    let financial_event_id=parseInt("{{financial_event.id}}")
+    
+    
+    console.log("financial_event !!!")
+    let financial_event=JSON.parse('{{financial_event_s|escapejs}}')
+    let financial_event_id=parseInt('{{financial_event.id}}')
+    console.log('financial_event')
+    console.log(financial_event)
+    console.log('financial_event.id')
+    console.log(financial_event_id)
+
 </script>
 {% include "core/includes/page-app/script.html" %}
 {% include "accounting/includes/financial-document-lines-app/script.html" %}
