--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -29,6 +29,17 @@
         </a>
     </div>
 
+    
+    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'accounting:assets' %}">
+            <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+                    دارایی ها
+            </h6>
+        </a>
+    </div>
+
+
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:tree_chart' pk=0 %}">
             <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
