--- a/accounting/templates/accounting/includes/assets-app/script.html
+++ b/accounting/templates/accounting/includes/assets-app/script.html
@@ -4,8 +4,13 @@
         el:"#assets-app",
         data:{
             assets:assets_for_assets_app,
+            waiting:false,
+            search_for:'',
         },
         methods:{
+            filter:function(){
+
+            },
             to_price:vall=>to_price(vall),  
 
         }
