--- a/accounting/templates/accounting/includes/account-app/card.html
+++ b/accounting/templates/accounting/includes/account-app/card.html
@@ -1,45 +1,33 @@
-{% load static %}
-{% load to_price %}
-{% load account_code_seperator %}
-
-{% load to_price_color_btn %}
+{% load static %} {% load to_price %} {% load account_code_seperator %} {% load
+to_price_color_btn %}
 <div class="card rtl text-right">
-    <div class="card-header">
-        <h5 class="text-center">
-            حساب
-        </h5>
+  <div class="card-header">
+    <h5 class="text-center">حساب</h5>
+  </div>
+  <div class="card-body">
+    <div class="text-center">
+      <img src="{{account.logo}}" width="64" alt="" />
     </div>
-    <div class="card-body">
 
-        <div class="text-center">
+    <h5 class="text-center mt-2">
+      {{account.name}}
+      <span class="badge badge-{{account.color}}">{{account.type}}</span>
+    </h5>
 
-            <img src="{{account.logo}}" width="64" alt="">
-        </div>
-
-        <h5 class="text-center mt-2">
-            {{account.name}}
-            <span class="badge badge-{{account.color}}">{{account.type}}</span>
-
-        </h5>
-
-        
- 
-
-        <h5 class="text-center mt-4">
-            <small class="text-muted">
-                کد : 
-            </small>
-            {{account.code}}
-
-        </h5> 
-         
-
-        <h5 class="text-center mt-4">
-            <small class="text-muted">
-                مانده : 
-            </small>
-            {{account.balance|to_price_color|safe}} {{CURRENCY}}
-
-        </h5>
+    <div class="text-center">
+      <a href="{{account.get_absolute_url}}">
+        <img width="128" src="{{account.get_qrcode_url}}" alt="" />
+      </a>
     </div>
+
+    <h5 class="text-center mt-4">
+      <small class="text-muted"> کد : </small>
+      {{account.code}}
+    </h5>
+
+    <h5 class="text-center mt-4">
+      <small class="text-muted"> مانده : </small>
+      {{account.balance|to_price_color|safe}} {{CURRENCY}}
+    </h5>
+  </div>
 </div>
