--- a/accounting/templates/accounting/includes/account-app/card.html
+++ b/accounting/templates/accounting/includes/account-app/card.html
@@ -1,5 +1,7 @@
-{% load static %} {% load to_price %} {% load account_code_seperator %}
- {% load to_price_color_btn %}
+{% load static %} 
+{% load to_price %} 
+{% load account_code_seperator %}
+{% load to_price_color_btn %}
 <div class="card rtl text-right">
   <div class="card-header">
     <h5 class="text-center">حساب</h5>
