--- a/core/templates/core/includes/page-app/card-contents.html
+++ b/core/templates/core/includes/page-app/card-contents.html
@@ -11,7 +11,7 @@
     <small class="text-muted2">{{page.class_title}}</small>
   </a>
 </div>
-<div>
+<div class="text-center">
   <a href="{{page.get_absolute_url}}">
 
     <img width="128" src="{{page.get_qrcode_url}}" alt="">
