messenger app added

--- a/templates/phoenix/includes/common-script.html
+++ b/templates/phoenix/includes/common-script.html
@@ -69,3 +69,9 @@
         $(".notification-divider:last").addClass("d-none")
     })
 </script>
+
+
+
+{% if PUSHER_IS_ENABLE %}
+{% include "phoenix/includes/pusher-script.html" %}
+{% endif %}
