breadcrumb for project page

--- a/projectmanager/templates/projectmanager/includes/sub-projects-app/script.html
+++ b/projectmanager/templates/projectmanager/includes/sub-projects-app/script.html
@@ -12,8 +12,8 @@
             show_detail: false,
         },
         methods: {
-            to_price: function (value, curr) {
-                return to_price(value, curr)
+            to_price: function (value) {
+                return to_price(value)
             },
             add_project: function () {
                 sub_projects_app.waiting = true
