--- a/projectmanager/templates/projectmanager/includes/project-app/card.html
+++ b/projectmanager/templates/projectmanager/includes/project-app/card.html
@@ -1,4 +1,5 @@
 {% load to_price %}
+
 <div class="card">
     <div class="card-header">
         <h6>
@@ -11,6 +12,11 @@
          
     </div>
     <div class="card-body">
+      
+         <h5>
+            {{project.title}}
+        </h5>
+
          <h5>
             برآورد : 
             {{project.amount|to_price}} {{CURRENCY}}
