--- a/accounting/templates/accounting/invoice-edit.html
+++ b/accounting/templates/accounting/invoice-edit.html
@@ -143,6 +143,8 @@
 
               <td>
                 <input
+                min="0"
+                max="100"
                   type="number"
                   class="form-control"
                   v-model="invoice_line.discount_percentage"
