--- a/market/templates/market/index.html
+++ b/market/templates/market/index.html
@@ -1,4 +1,4 @@
-{% extends "core/layout.html" %}
+{% extends "market/layout.html" %}
 {% load static %}
 {% block content %}
 <div class="row rtl farsi">
