--- a/market/templates/market/includes/shops-app/template.html
+++ b/market/templates/market/includes/shops-app/template.html
@@ -1,163 +1,145 @@
 <div id="accordion-shops" class="rtl text-right farsi">
-
-<div id="shops-app" class="card">
+  <div id="shops-app" class="card">
     <div class="card-header">
-        <h5 class="text-center">
-            قیمت های آماده فروش
-        </h5>
+      <h5 class="text-center">
+        <button
+          class="btn btn-link"
+          data-toggle="collapse"
+          data-target="#collapse-shops"
+          aria-expanded="true"
+          aria-controls="collapse-shops"
+        >
+          آماده فروش
+          <span v-if="shops.length>0">
+            <small class="text-danger mx-2">
+              <span v-text="shops.length"></span>
+            </small>
+          </span>
+        </button>
+      </h5>
     </div>
-    <div class="card-body">
+    <div
+      id="collapse-shops"
+      class="collapse {% if expand_shops %} show {% endif %}"
+      aria-labelledby="heading-shops"
+      data-parent="#accordion-shops">
+      <div class="card-body">
         <div v-if="shops.length==0" class="table-responsive">
-            <h6>
-                قیمتی اعلام نشده است.
-            </h6>
+          <h6>قیمتی اعلام نشده است.</h6>
         </div>
         <div v-if="shops.length>0" class="table-responsive">
+          <table class="table">
+            <thead>
+              {% if not product %}
+              <th>کالا</th>
+              {% endif %} {% if not supplier %}
+              <th>فروشنده</th>
+              {% endif %}
 
+              <th>موجود</th>
+              <th>واحد فروش</th>
 
-            <table class="table">
-                <thead>
-                    {% if not product %}
-                    <th>
-                        کالا
-                    </th>
-                    {% endif %}
+              <th>سطح فروش</th>
+              <th>تخفیف</th>
+              <th>فی</th>
 
-                    {% if not supplier %}
-                    <th>
-                        فروشنده
-                    </th>
-                    {% endif %}
+              <th>تاریخ</th>
+              {% if perms.market.change_shop or perms.market.delete_shop %}
+              <th></th>
 
+              {% endif %}
+            </thead>
+            <tbody>
+              <tr v-for="shop in shops">
+                {% if not product %}
+                <td>
+                  <a :href="shop.product.get_market_absolute_url"
+                    ><span v-text="shop.product.title"></span
+                  ></a>
+                </td>
+                {% endif %} {% if not supplier %}
 
-                    <th>
-                        موجود
-                    </th>
-                    <th>
-                        واحد فروش
-                    </th>
+                <td>
+                  <a :href="shop.supplier.get_absolute_url"
+                    ><span v-text="shop.supplier.full_name"></span
+                  ></a>
+                </td>
+                {% endif %}
 
-                    <th>
-                        سطح فروش
-                    </th>
-                    <th>
-                         تخفیف
-                    </th>
-                    <th>
-                        فی
-                    </th>
+                <td>
+                  <span v-text="shop.available"></span>
+                </td>
+                <td>
+                  <span v-text="shop.unit_name"></span>
+                </td>
 
-                    <th>
-                        تاریخ
-                    </th>
-                    {% if perms.market.change_shop or perms.market.delete_shop %}
-                    <th>
+                <td>
+                  <span v-text="shop.level"></span>
+                </td>
+                <td>
+                    <div v-if="shop.discount_percentage>0">
 
-                    </th>
-
-                    {% endif %}
-
-
-                </thead>
-                <tbody>
-                    <tr v-for="shop in shops">
-                        {% if not product %}
-                        <td>
-                            <a :href="shop.product.get_market_absolute_url"><span v-text="shop.product.title"></span></a>
-                        </td>
-                        {% endif %}
-                        {% if not supplier %}
-
-                        <td>
-                            <a :href="shop.supplier.get_absolute_url"><span v-text="shop.supplier.full_name"></span></a>
-                        </td>
-                        {% endif %}
-
-
-
-                        <td>
-
-                            <span v-text="shop.available"></span>
-
-
-                        </td>
-                        <td>
-
-                            <span v-text="shop.unit_name"></span>
-
-
-                        </td>
-
-                        <td>
-                            <span v-text="shop.level"></span>
-
-                        </td>
-                        <td>
-                            <div class="text-success">
-                          
-                            <span v-text="to_price(shop.discount_percentage*shop.unit_price/100)"></span>
+                        <div class="text-success">
+                            <span
+                            v-text="to_price(shop.discount_percentage*shop.unit_price/100)"
+                            ></span>
                             {{CURRENCY}}
-
-                           </div>
-                           <div>
+                        </div>
+                        <div>
                             <span v-text="shop.discount_percentage"></span>
-                           %
+                            %
+                        </div>
+                  </div>
+                </td>
 
-                           </div>
+                <td>
+                  <div>
+                    <span
+                      v-text="to_price(shop.unit_price-(shop.discount_percentage*shop.unit_price/100))"
+                    ></span>
+                    {{CURRENCY}}
+                  </div>
 
-                            
-                        </td>
+                  <div v-if="shop.discount_percentage>0"
+                    class="text-muted"
+                    style="text-decoration: line-through"
+                  >
+                    <span v-text="to_price(shop.unit_price)"></span>
+                    {{CURRENCY}}
+                  </div>
+                </td>
 
-                        <td>
-                            <div>
+                <td>
+                  <div>
+                    <small class="text-muted">
+                      <span v-text="shop.persian_start_date"></span>
+                    </small>
+                  </div>
 
-                                <span v-text="to_price(shop.unit_price-(shop.discount_percentage*shop.unit_price/100))"></span>
-                                {{CURRENCY}}
-                            </div>
-
-                            <div class="text-danger" style="text-decoration: line-through;">
-
-                                <span v-text="to_price(shop.unit_price)"></span>
-                                {{CURRENCY}}
-                            </div>
-
-                        </td>
-
-                        <td>
-                            <div>
-                                <small class="text-muted">
-
-                                    <span v-text="shop.persian_start_date"></span>
-                                </small>
-                            </div>
-
-                            <div>
-                                <small class="text-muted">
-
-                                    <span v-text="shop.persian_end_date"></span>
-                                </small>
-                            </div>
-
-                        </td>
-                        {% if perms.market.change_shop or perms.market.delete_shop %}
-                        <td>
-                            {% if perms.market.change_shop %}
-                            <a target="_blank" :href="shop.get_edit_url" title="ویرایش">
-                                <i class="fa fa-edit text-warning"></i>
-                            </a>
-                            {% endif %}
-
-                            {% if perms.market.delete_shop %}
-                            <a target="_blank" :href="shop.get_delete_url" title="حذف">
-                                <i class="fa fa-trash text-danger"></i>
-                            </a>
-                            {% endif %}
-                        </td>
-                        {% endif %}
-                    </tr>
-                </tbody>
-            </table>
+                  <div>
+                    <small class="text-muted">
+                      <span v-text="shop.persian_end_date"></span>
+                    </small>
+                  </div>
+                </td>
+                {% if perms.market.change_shop or perms.market.delete_shop %}
+                <td>
+                  {% if perms.market.change_shop %}
+                  <a target="_blank" :href="shop.get_edit_url" title="ویرایش">
+                    <i class="fa fa-edit text-warning"></i>
+                  </a>
+                  {% endif %} {% if perms.market.delete_shop %}
+                  <a target="_blank" :href="shop.get_delete_url" title="حذف">
+                    <i class="fa fa-trash text-danger"></i>
+                  </a>
+                  {% endif %}
+                </td>
+                {% endif %}
+              </tr>
+            </tbody>
+          </table>
         </div>
+      </div>
     </div>
-</div>
+  </div>
 </div>
